--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
   </section>
 
-  <!-- TESTIMONIOS -->
+  <!-- TESTIMONIOS 
   <section id="testimonios" class="testimonials">
     <div class="container">
       <h2 class="section-title">Comentarios de mis clientes</h2>
@@ -134,13 +134,13 @@
           <p class="testimonial-text">"Ignacio captó la esencia de Matafuegos Iglesias de inmediato. Pasamos de una web antigua a una plataforma profesional que nos genera consultas reales de CABA y GBA todos los días."</p>
           <p class="testimonial-author">— Dueño de Matafuegos Iglesias</p>
         </div>
-        <!--<div class="testimonial-card">
+         <div class="testimonial-card">
           <p class="testimonial-text">"Excelente profesional. Mi web carga rapidísimo y mis clientes me felicitan por el diseño."</p>
           <p class="testimonial-author">— Cliente de sitio web</p>
-        </div>-->
+        </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- CONTACTO -->
   <section id="contacto" class="contact">
@@ -168,7 +168,7 @@
           <textarea id="mensaje" name="mensaje" rows="5" placeholder=" " required></textarea>
           <label for="mensaje">Tu Mensaje</label>
         </div>
-        <button type="submit" class="btn">Enviar Mensaje</button>
+        <button type="button" class="btn" id="btn-enviar">Enviar Mensaje</button>
       </form>
     </div>
   </section>
